# Python_Lab8

./: .gitignore  README.md  pyproject.toml
app/: config.py  exceptions.py  handlers.py  logging_config.py  main.py  middleware.py  schemas.py
app/routers/: __init__.py  test_routes.py  users.py
tests/: test_errors.py
